# crik-server

./: .gitignore  LICENSE  README.md  crik-server.cabal  package.yaml  schema.sql  stack.yaml  swagger.json  tap-video.cabal
app/: Config.hs  Main.hs  Routes.hs  Utils.hs
app/Routes/: File.hs  Library.hs  Static.hs  Video.hs  VideoLibrary.hs
scripts/: create-database.sh  crik.conf  crik.service  install.sh  local-dev.sh
sql/: 1528035625-change-names.sql  1529758474-add-name-to-library.sql  schema.sql
src/: API.hs  Types.hs
src/Database/: Error.hs  File.hs  Instance.hs  Library.hs  Video.hs  VideoFile.hs  VideoLibrary.hs
src/Types/: Video.hs  VideoFile.hs  VideoLibrary.hs
swagger-gen/: Main.hs
