name:                tap-video
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JacobLeach/tap-video#readme
license:             BSD3
license-file:        LICENSE
author:              Jacob Leach
maintainer:          leach.jacob@gmail.com
copyright:           Copyright: (c) 2017 Jacob Leach
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types.Video
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , postgresql-simple
                     , text
  default-language:    Haskell2010
  extensions:          
                       RecordWildCards
                     , OverloadedStrings

executable tap-video-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , postgresql-simple
                     , scotty
                     , tap-video
                     , text
                     , http-types
  default-language:    Haskell2010
  extensions:          
                       OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables

test-suite tap-video-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tap-video
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JacobLeach/tap-video
