name:                tap-video
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JacobLeach/tap-video#readme
author:              Jacob Leach
maintainer:          leach.jacob@gmail.com
copyright:           Copyright: (c) 2017 Jacob Leach
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                       Database.Video
                     , Database.VideoFile
                     , Types.Video
                     , Types.VideoFile
  build-depends:       
                       aeson
                     , base >= 4.7 && < 5
                     , postgresql-simple
                     , text
  default-language:    Haskell2010
  extensions:          
                       OverloadedStrings
                     , RecordWildCards

executable tap-video-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:      
                       aeson
                     , base
                     , http-types
                     , postgresql-simple
                     , scotty
                     , tap-video
                     , text
                     , wai-extra
  default-language:    Haskell2010
  extensions:          
                       OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables

test-suite tap-video-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       
                       base
                     , tap-video
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JacobLeach/tap-video
